attempted to fix overflow on body tag

--- a/coh/css/main.css
+++ b/coh/css/main.css
@@ -5,7 +5,7 @@ html, body, {
 	height: 100%;
 }
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .font-roboto-bold {
